# hs-websocket-bot2

./: .gitignore  JamesBot2.cabal  README.md  cabal.sandbox.config
src/: Commands.hs  Main.hs  Parsers.hs  PostBot.hs
src/Internal/: Args.hs  Channel.hs  Commands.hs  Parsing.hs  Routing.hs  Types.hs  WebSocket.hs
src/Parsers/: DateTime.hs
src/Tools/: Persist.hs  Reminders.hs  Text.hs
