
name:                JamesBot2
version:             0.2.0.0
synopsis:            A chat bot
-- description:
homepage:            unbui.lt
-- license:
license-file:        LICENSE
author:              James Wilson
maintainer:          me@unbui.lt
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable JamesBot
  main-is:             Main.hs
  ghc-options:         -O3
                       -threaded
                       -feager-blackholing
                       "-with-rtsopts=-N -g1"
  default-extensions:  FlexibleInstances,
                       OverloadedStrings,
                       PatternSynonyms,
                       ScopedTypeVariables,
                       RecordWildCards,
                       ViewPatterns,
                       RankNTypes
  build-depends:       base >=4.8 && < 4.9,
                       containers >= 0.5.6.2 && < 0.6,
                       transformers >= 0.4.3 && < 0.5,
                       random >= 1.1 && < 1.2,
                       time >= 1.5.0.1 && < 1.6,
                       mtl >= 2.2.1 && < 2.3,
                       data-default >= 0.5.3 && < 0.6,
                       text >=1.2 && < 1.3,
                       bytestring >= 0.10.6 && < 0.11,
                       attoparsec >= 0.13 && < 0.14,
                       control-monad-free >= 0.6 && < 0.7,
                       websockets >= 0.9.5 && < 0.10,
                       aeson >= 0.9.0.1 && <= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010

executable PostBot
  main-is:             PostBot.hs
  ghc-options:         -O3
                       -threaded
                       -feager-blackholing
                       "-with-rtsopts=-N -g1"
  default-extensions:  FlexibleInstances,
                       OverloadedStrings,
                       PatternSynonyms,
                       ScopedTypeVariables,
                       RecordWildCards,
                       ViewPatterns,
                       RankNTypes,
                       DataKinds,
                       TypeOperators
  build-depends:       base >=4.8 && < 4.9,
                       servant-server == 0.4.4.6,
                       wai == 3.2.0,
                       warp == 3.2.2,

                       containers >= 0.5.6.2 && < 0.6,
                       transformers >= 0.4.3 && < 0.5,
                       random >= 1.1 && < 1.2,
                       time >= 1.5.0.1 && < 1.6,
                       mtl >= 2.2.1 && < 2.3,
                       data-default >= 0.5.3 && < 0.6,
                       text >=1.2 && < 1.3,
                       bytestring >= 0.10.6 && < 0.11,
                       attoparsec >= 0.13 && < 0.14,
                       control-monad-free >= 0.6 && < 0.7,
                       websockets >= 0.9.5 && < 0.10,
                       aeson >= 0.9.0.1 && <= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010